[#114] support for mounted collections, cross zone browsing, and soft links